Replace sample env with production defaults
